end to end working copy